Revisions based on feedback.

--- a/docs/quickstarts/nextjs.mdx
+++ b/docs/quickstarts/nextjs.mdx
@@ -122,7 +122,7 @@ The [`<ClerkProvider>`](/docs/components/clerk-provider) component provides acti
 
 ### Add Middleware to your app
 
-Middleware grants you access to user authentication state throughout your application, on any route or page. While `clerkMiddleware()` offers the capability to protect routes, it does not enforce protection by default.
+Middleware grants you access to user authentication state throughout your application, on any route or page. While `clerkMiddleware()` offers the capability to protect routes, it does not enforce protection by default. Please see [`clerkMiddleware()`](/docs/references/nextjs/clerk-middleware) and the [Route Protection](/docs/references/nextjs/route-protection) for information on protecting routes.
 
 To get started, create a `middleware.ts` file. If your application uses the `src/` directory, your `middleware.ts` file should be placed inside the `src/` folder. If you are not using a `src/` directory, place the `middleware.ts` file in your root directory alongside `.env.local`.
 
@@ -142,20 +142,15 @@ export const config = {
 
 ### Use Clerk components to protect your content
 
-Clerk offers a set of [prebuilt components](/docs/components/overview) that can gate access to content based on whether a user is signed in and/or has the correct permissions. You can use Clerk's [`<SignedIn>`](/docs/components/control/signed-in) and [`<SignedOut>`](/docs/components/control/signed-out) components to restrict access to content within pages and even whole pages. The `<SignedIn>` component displays the content inside the tags only when the user is signed in. The `<SignedOut>` components displays its content only when the user is signed out.
+Clerk provides [prebuilt components](/docs/components/overview) that control content access based on user authentication and permissions. These components can be used to restrict access to specific content or entire pages.
 
-
-Clerk provides prebuilt components that control content access based on user authentication and permissions. These components can be used to restrict access to specific content or entire pages.
-To manage content visibility for signed-in users, use the `<SignedIn>` component:
+To manage content visibility for signed-in users, use the [`<SignedIn>`](/docs/components/control/signed-in)  component:
 - Enclose content within the `<SignedIn>` tags to make it viewable only by users who are currently signed in.
 - Content outside of these tags remains accessible to both signed-in and signed-out users.
-To manage content visibility for signed-out users, use the `<SignedOut>` component:
+
+To manage content visibility for signed-out users, use the [`<SignedOut>`](/docs/components/control/signed-in)  component:
 - Enclose content within the `<SignedOut>` tags to make it visible only to users who are currently not signed in.
-- Content outside of these tags is only accessible to signed-in users.
-For more information on these components, refer to the following documentation:
-- Overview of Clerk's Prebuilt Components: /docs/components/overview
-- Control Access with `<SignedIn>`: /docs/components/control/signed-in
-- Control Access with `<SignedOut>`: /docs/components/control/signed-out
+- Content outside of these tags is only accessible to both signed-in and signed-out users.
 
 
 <CodeBlockTabs type="router" options={["App Router", "Pages Router"]}>
@@ -196,14 +191,14 @@ export default function Home() {
 
 Try accessing your app now by visiting [`http://localhost:3000`](http://localhost:3000) to see what signed out users will see. Next you will add a button so you can sign in and see the content within the `<SignedIn />` component.
 
-
 ### Embed the `<UserButton />` and `<SignInButton />`
 
-Clerk offers a set of [prebuilt components](/docs/components/overview) to add functionality to your app with minimal effort. The [`<UserButton />`](/docs/components/user/user-button) allows users to manage their account information and log out, completing the full authentication circle. The [`<SignInButton />`(/docs/components/unstyled/sign-in-button)] is an unstyled component designed to wrap around your own custom button. It can also act as a basic button on its own.
+The [`<UserButton />`](/docs/components/user/user-button) allows users to manage their account information and log out, completing the full authentication circle. The [`<SignInButton />`(/docs/components/unstyled/sign-in-button)] is an unstyled component designed to wrap around your button. It can also act as a basic button on its own.
 
-
-To add the `<UserButton />` and `<SignInButton />` components, first add `import { UserButton, SignedInButton } from "@clerk/nextjs";` to the top of your file. Then, add `<UserButton afterSignOutUrl="/"/>` inside of the `<SignedIn />` components. The `afterSignOutUrl` prop lets you customize what page the user will be redirected to after sign out. Finally, add `<SignInButton />` component inside of the `<SignedOut /> components`
-
+To add the `<UserButton />` and `<SignInButton />`, do the following:
+- Add `import { UserButton, SignInButton } from "@clerk/nextjs";` to the top of your file. 
+- Ddd `<SignInButton />` comoponent inside of the `<SignedOut /> components`
+- Add `<UserButton/>` inside of the `<SignedIn />` components.
 
 <CodeBlockTabs type="router" options={["App Router", "Pages Router"]}>
 ```tsx filename="app/page.tsx" {1,7,11}
