Change based on feedback

--- a/docs/quickstarts/nextjs.mdx
+++ b/docs/quickstarts/nextjs.mdx
@@ -240,7 +240,7 @@ export default function Home() {
 ```
 </CodeBlockTabs>
 
-Visit [http://localhost:3000](http://localhost:3000)] and try signing in to see the protected content and signing out to see the protected and unprotected content.
+Visit [http://localhost:3000](http://localhost:3000)] and try using the `<SignInButton />` to sign in and see the protected content. Once signed in, you can use the `<UserButton />` to sign out and see the unprotected content again.
 
 ### Deploy your application
 
