--- a/docs/quickstarts/nextjs.mdx
+++ b/docs/quickstarts/nextjs.mdx
@@ -20,8 +20,10 @@ description: Learn how to use Clerk to quickly and easily add secure authenticat
 - Install `@clerk/nextjs`
 - Set up your environment keys
 - Wrap your Next.js app in `<ClerkProvider />`
-- Limit access to authenticated users
-- Embed the `<UserButton />`
+- Add Middleware to your app
+- Use Clerk components to protect your content
+- Embed the `<UserButton />` and `<SignInButton />`
+- Deploy your application
 
 </TutorialHero>
 
@@ -77,7 +79,7 @@ The [`<ClerkProvider>`](/docs/components/clerk-provider) component provides acti
 
     For this project, it makes sense to wrap the `<html />` element with `<ClerkProvider>`. This makes the active session and user context accessible anywhere within the app.
 
-    ```tsx filename="/src/app/layout.tsx" {1,10,14}
+    ```tsx filename="app/layout.tsx" {1,10,14}
     import { ClerkProvider } from '@clerk/nextjs'
     import './globals.css'
 
@@ -118,68 +120,127 @@ The [`<ClerkProvider>`](/docs/components/clerk-provider) component provides acti
   </Tab>
 </Tabs>
 
-### Require authentication to access your app
+### Add Middleware to your app
 
-Now that Clerk is installed and mounted in your application, you can decide which pages are public and which should require authentication to access.
+Middleware grants you access to user authentication state throughout your application, on any route or page. While `clerkMiddleware()` offers the capability to protect routes, it does not enforce protection by default. Please see [`clerkMiddleware()`](/docs/references/nextjs/clerk-middleware) and the [Route Protection](/docs/references/nextjs/route-protection) for information on protecting routes.
 
-Create a `middleware.ts` file. If your application uses the `src/` directory, your `middleware.ts` file should be placed inside the `src/` folder. If you are not using a `src/` directory, place the `middleware.ts` file in your root directory alongside `.env.local`.
+To get started, create a `middleware.ts` file. If your application uses the `src/` directory, your `middleware.ts` file should be placed inside the `src/` folder. If you are not using a `src/` directory, place the `middleware.ts` file in your root directory alongside `.env.local`.
 
-Copy and paste the following code into your `middleware.ts`. With this, your entire application is protected.
+
+Then, copy and paste the following code into your `middleware.ts`. 
+
 
 ```tsx filename="middleware.ts"
-import { authMiddleware } from "@clerk/nextjs";
+import { clerkMiddleware } from "@clerk/nextjs/server";
 
-// This example protects all routes including api/trpc routes
-// Please edit this to allow other routes to be public as needed.
-// See https://clerk.com/docs/references/nextjs/auth-middleware for more information about configuring your Middleware
-export default authMiddleware({});
+export default clerkMiddleware()
 
 export const config = {
-  matcher: ["/((?!.+\\.[\\w]+$|_next).*)", "/", "/(api|trpc)(.*)"],
+  matcher: ['/((?!.+\\.[\\w]+$|_next).*)', '/', '/(api|trpc)(.*)'],
 };
 ```
 
-**Try accessing your app now by visiting [`http://localhost:3000`](http://localhost:3000).** The Middleware will redirect you to your Sign Up page, provided by Clerk's [Account Portal](/docs/account-portal/overview) feature. If you want to make other routes public, check out the [`authMiddleware` reference page](/docs/references/nextjs/auth-middleware). Go ahead and sign up to get access to your application. Your app is now fully protected by Clerk!
+### Use Clerk components to protect your content
 
-### Embed the `<UserButton />`
+Clerk provides [prebuilt components](/docs/components/overview) that control content access based on user authentication and permissions. These components can be used to restrict access to specific content or entire pages.
 
-Clerk offers a set of [prebuilt components](/docs/components/overview) to add functionality to your app with minimal effort. The [`<UserButton />`](/docs/components/user/user-button) allows users to manage their account information and log out, completing the full authentication circle.
+To manage content visibility for signed-in users, use the [`<SignedIn>`](/docs/components/control/signed-in)  component:
+- Enclose content within the `<SignedIn>` tags to make it viewable only by users who are currently signed in.
+- Content outside of these tags remains accessible to both signed-in and signed-out users.
 
-Add the `<UserButton />` anywhere inside `<ClerkProvider>` in your app. First, add `import { UserButton } from "@clerk/nextjs";` to the top of your file. Then, add `<UserButton afterSignOutUrl="/"/>`. The `afterSignOutUrl` prop lets you customize what page the user will be redirected to after sign out.
+To manage content visibility for signed-out users, use the [`<SignedOut>`](/docs/components/control/signed-in)  component:
+- Enclose content within the `<SignedOut>` tags to make it visible only to users who are currently not signed in.
+- Content outside of these tags is only accessible to both signed-in and signed-out users.
+
 
 <CodeBlockTabs type="router" options={["App Router", "Pages Router"]}>
-```tsx filename="app/page.tsx" {1,6}
-import { UserButton } from "@clerk/nextjs";
+```tsx filename="app/page.tsx" {1,6-11}
+import { SignedIn, SignedOut } from "@clerk/nextjs";
 
 export default function Home() {
   return (
     <div className="h-screen">
-      <UserButton afterSignOutUrl="/"/>
+      <SignedOut>
+        <p>This content is public. Only signed out users can see this.</p>
+      </SignedOut>
+      <SignedIn>
+        <p>This content is private. Only signed in users can see this.</p>
+      </SignedIn>
     </div>
   )
 }
 ```
 
-```tsx filename="pages/index.tsx" {1,7}
-import { UserButton } from "@clerk/nextjs";
+```tsx filename="pages/index.tsx" {1,6-11}
+import { SignedIn, SignedOut } from "@clerk/nextjs";
 
 export default function Home() {
   return (
-    <>
-      <header>
-        <UserButton afterSignOutUrl="/" />
-      </header>
-      <div>Your home page's content can go here.</div>
-    </>
+    <div>
+      <SignedOut>
+        <p>This content is public. Only signed out users can see this.</p>
+      </SignedOut>
+      <SignedIn>
+        <p>This content is private. Only signed in users can see this.</p>
+      </SignedIn>
+    </div>
   );
+}
+``` 
+</CodeBlockTabs>
+
+Try accessing your app now by visiting [`http://localhost:3000`](http://localhost:3000) to see what signed out users will see. Next you will add a button so you can sign in and see the content within the `<SignedIn />` component.
+
+### Embed the `<UserButton />` and `<SignInButton />`
+
+The [`<UserButton />`](/docs/components/user/user-button) allows users to manage their account information and log out, completing the full authentication circle. The [`<SignInButton />`(/docs/components/unstyled/sign-in-button)] is an unstyled component designed to wrap around your button. It can also act as a basic button on its own.
+
+To add the `<UserButton />` and `<SignInButton />`, do the following:
+- Add `import { UserButton, SignInButton } from "@clerk/nextjs";` to the top of your file. 
+- Ddd `<SignInButton />` comoponent inside of the `<SignedOut /> components`
+- Add `<UserButton/>` inside of the `<SignedIn />` components.
+
+<CodeBlockTabs type="router" options={["App Router", "Pages Router"]}>
+```tsx filename="app/page.tsx" {1,7,11}
+import { SignInButton, SignedIn, SignedOut, UserButton } from "@clerk/nextjs";
+
+export default function Home() {
+  return (
+    <div className="h-screen">
+      <SignedOut>
+        <SignInButton />
+        <p>This content is public. Only signed out users can see this.</p>
+      </SignedOut>
+      <SignedIn>
+        <UserButton />
+        <p>This content is private. Only signed in users can see this.</p>
+      </SignedIn>
+    </div>
+  )
 }
 ```
 
+```tsx filename="pages/index.tsx" {1,7,11}
+import { SignInButton, SignedIn, SignedOut, UserButton } from "@clerk/nextjs";
+
+export default function Home() {
+  return (
+    <div>
+      <SignedOut>
+        <SignInButton />
+        <p>This content is public. Only signed out users can see this.</p>
+      </SignedOut>
+      <SignedIn>
+        <UserButton />
+        <p>This content is private. Only signed in users can see this.</p>
+      </SignedIn>
+    </div>
+  );
+}
+```
 </CodeBlockTabs>
 
-### Sign out of your application
-
-Visit your Next.js application at [`localhost:3000`](http://localhost:3000), click on your avatar, and select **Sign out**. You are now back where you started: a sign-in form.
+Visit [http://localhost:3000](http://localhost:3000)] and try using the `<SignInButton />` to sign in and see the protected content. Once signed in, you can use the `<UserButton />` to sign out and see the unprotected content again.
 
 ### Deploy your application
 
@@ -196,7 +257,11 @@ If you would like a repository that demonstrates many of the features Clerk has 
 - [Clerk + Next.js App Router Demo](https://github.com/clerk/clerk-nextjs-demo-app-router)
 - [Clerk + Next.js Pages Router Demo](https://github.com/clerk/clerk-nextjs-demo-pages-router)
 
-## Next steps
+## Next step: Route Protection
+
+Learn about the options available for protecting your routes, from using `clerkMiddleware()` to layouts or even per page. Read the [Route Protection](/docs/references/nextjs/route-protection) guide to learn more.
+
+You can also learn more about Clerk components, how to customize them, and how to use Clerk's client side helpers. The following guides are good places to start.
 
 <div className="container mx-auto my-4">
   <div className="grid grid-cols-1 gap-6 md:grid-cols-2">
