Updated quickstart for v5 (#649)
Co-authored-by: Jacob M-G Evans <27247160+JacobMGEvans@users.noreply.github.com>
Co-authored-by: Jeff Escalante <jescalan@users.noreply.github.com>

--- a/docs/quickstarts/nextjs.mdx
+++ b/docs/quickstarts/nextjs.mdx
@@ -233,6 +233,38 @@ export default function Home() {
 ```
 </CodeBlockTabs>
 
+Try accessing your app now by visiting [`http://localhost:3000`](http://localhost:3000) to see what signed out users will see. Next you will add a button so you can sign in and see the content within the `<SignedIn />` component.
+
+### Embed the `<UserButton />` and `<SignInButton />`
+
+The [`<UserButton />`](/docs/components/user/user-button) allows users to manage their account information and log out, completing the full authentication circle. The [`<SignInButton />`(/docs/components/unstyled/sign-in-button)] is an unstyled component designed to wrap around your button. It can also act as a basic button on its own.
+
+To add the `<UserButton />` and `<SignInButton />`, do the following:
+- Add `import { UserButton, SignInButton } from "@clerk/nextjs";` to the top of your file.
+- Ddd `<SignInButton />` comoponent inside of the `<SignedOut /> components`
+- Add `<UserButton/>` inside of the `<SignedIn />` components.
+
+<CodeBlockTabs type="router" options={["App Router", "Pages Router"]}>
+```tsx filename="app/page.tsx" {1,7,11}
+import { SignInButton, SignedIn, SignedOut, UserButton } from "@clerk/nextjs";
+
+export default function Home() {
+  return (
+    <div className="h-screen">
+      <SignedOut>
+        <SignInButton />
+        <p>This content is public. Only signed out users can see this.</p>
+      </SignedOut>
+      <SignedIn>
+        <UserButton />
+        <p>This content is private. Only signed in users can see this.</p>
+      </SignedIn>
+    </div>
+  )
+}
+```
+</CodeBlockTabs>
+
 Then, visit your app's homepage at [`localhost:3000`](http://localhost:3000) while signed out to see the sign-in button. Once signed in, your app will render the user button.
 
 </Steps>
