--- a/docs/authentication/saml-at-clerk.mdx
+++ b/docs/authentication/saml-at-clerk.mdx
@@ -9,7 +9,7 @@ Clerk supports Enterprise SSO via the SAML protocol so that you can create authe
 
 ## Prerequisites
 
-- A Clerk application with the [Business](https://clerk.com/pricing) plan.
+- A Clerk application with the [Enhanced authentication add-on](https://clerk.com/pricing) plan.
 {/* TODO: This would be a good place for a Nutshell (Ask Rachel). "To do so..." could go in the nutshell. */}
 - An `email_address` enabled as a strategy. In the Clerk Dashboard, go to **User & Authentication > [Email, Phone, Username](https://dashboard.clerk.com/last-active?path=user-authentication/email-phone-username)**. In the **Contact information** section, enable the **Email address** strategy by toggling on the switch.
 
