--- a/docs/quickstarts/expo.mdx
+++ b/docs/quickstarts/expo.mdx
@@ -674,7 +674,11 @@ export default function UseUserExample() {
 ```
 </Steps>
 
-### Next steps
+## Additional consideration
+
+Clerk recommends implementing over-the-air (OTA) updates into your Expo application. This enables easy roll out of feature updates and security patches as they're applied to Clerk's SDK's, without having to resubmit your application to the marketplace. Check out [`expo-updates`](https://docs.expo.dev/versions/latest/sdk/updates) for how this can be accomplished.
+
+## Next steps
 
 Now that you have an application integrated with Clerk, you will want to read the following documentation:
 
