--- a/docs/integrations/webhooks/inngest.mdx
+++ b/docs/integrations/webhooks/inngest.mdx
@@ -14,7 +14,7 @@ Webhooks allow you to [synchronize data](/docs/users/sync-data) from Clerk to yo
 
 In this guide, you'll learn how to set up Inngest to receive Clerk webhook events and how to define Inngest functions in your application using Clerk events including synchronizing data and sending welcome emails.
 
-To follow this guide, you need an Inngest account and have Inngest [set up](https://www.inngest.com/docs/quick-start) in your codebase.
+To follow this guide, you need an Inngest account (free tier is enough) and have Inngest [set up](https://www.inngest.com/docs/quick-start) in your codebase.
 
 ## Setting up the Inngest webhook
 
