--- a/docs/integrations/webhooks/inngest.mdx
+++ b/docs/integrations/webhooks/inngest.mdx
@@ -39,10 +39,10 @@ On the next page, select the **Transformation template** tab and the **Inngest**
 A popup window will appear to complete the setup. Select **Approve** to create the webhook.
 
 <Images
-  width={1880}
-  height={1448}
-  src="/docs/images/integrations/inngest/webhook-endpoint-connected.webp"
-  alt="The Webhooks page in the Clerk Dashboard showing a connected Inngest account. A red arrow points to the Connected button."
+  width={1194}
+  height={1520}
+  src="/docs/images/integrations/inngest/inngest-permissions-dialog.webp"
+  alt="The Inngest permissions popup window showing the Approve button."
 />
 
 After the popup window disappears, the Webhooks page will now display **Connected** with the webhook URL underneath. There is one more step to complete setup.
