--- a/docs/integrations/webhooks/inngest.mdx
+++ b/docs/integrations/webhooks/inngest.mdx
@@ -69,7 +69,7 @@ You'll be redirected to the new endpoint. In your Inngest dashboard, you will se
 
 ## Viewing webhook events within Inngest
 
-After setup, as webhook events are sent from Clerk to Inngest, new `clerk `events will appear  in your Inngest dashboard. Event names will be the prefixed `clerk/` followed by the event name. See [webhook events](/docs/integrations/webhooks#supported-webhook-events) for a full list.
+After setup, as webhook events are sent from Clerk to Inngest, new `clerk` events will appear in your [Inngest dashboard](https://app.inngest.com/env/production/events). Event names will be the prefixed `clerk/` followed by the event name. See [webhook events](/docs/integrations/webhooks#supported-webhook-events) for a full list.
 
 <Images
   width={1052}
