--- a/docs/integrations/webhooks/inngest.mdx
+++ b/docs/integrations/webhooks/inngest.mdx
@@ -129,6 +129,7 @@ const sendWelcomeEmail = inngest.createFunction(
    const email = user.email_addresses.find(e =>
      e.id === user.primary_email_address_id
    ).email
+   // `emails` is a placeholder for the function in your codebase to send email
    await emails.sendWelcomeEmail({ email, first_name })
  }
 )
