--- a/docs/integrations/webhooks/inngest.mdx
+++ b/docs/integrations/webhooks/inngest.mdx
@@ -182,7 +182,7 @@ During local development with Inngest, you can use the [Inngest Dev Server](http
 npx inngest-cli@latest dev
 ```
 
-In your browser open [http://localhost:8288](http://localhost:8288) to see the development UI.
+In your browser open [http://localhost:8288](http://localhost:8288) to see the Inngest Dev Server.
 
 To quickly get events to test within Dev Server, you can select any individual event from the **Events** tab then select the **Send to Dev Server**.
 
