--- a/docs/integrations/webhooks/inngest.mdx
+++ b/docs/integrations/webhooks/inngest.mdx
@@ -157,6 +157,7 @@ const sendOnboardingEmails = inngest.createFunction(
    ).email
 
    await step.run('welcome-email', async () => {
+     // `emails` is a placeholder for the function in your codebase to send email
      await emails.sendWelcomeEmail({ email, first_name })
    })
 
