--- a/docs/integrations/webhooks/inngest.mdx
+++ b/docs/integrations/webhooks/inngest.mdx
@@ -82,7 +82,7 @@ After setup, as webhook events are sent from Clerk to Inngest, new `clerk` event
 
 With Inngest already set up in your codebase, you can now use these events as triggers for your functions.
 
-The code below features the `inngest.createFunction` method, which inserts a new user into the database. It will be triggered whenever `clerk/user.created` event occurs.
+Suppose you need to write a function which will insert a new user into the database which will be triggered whenever `clerk/user.created` event occurs. You would use the `inngest.createFunction` method, like in the example below:
 
 
 ```typescript
