--- a/docs/integrations/webhooks/inngest.mdx
+++ b/docs/integrations/webhooks/inngest.mdx
@@ -87,7 +87,7 @@ Suppose you need to write a function which will insert a new user into the datab
 
 ```typescript
 const syncUser = inngest.createFunction(
- { id: 'sync-user-from-clerk' },
+ { id: 'sync-user-from-clerk' },  // ←The 'id' is an arbitrary string used to identify the function in the dashboard
  { event: 'clerk/user.created' }, // ← This is the function's triggering event
  async ({ event }) => {
    const user = event.data; // The event payload's data will be the Clerk User json object
