--- a/docs/integrations/webhooks/inngest.mdx
+++ b/docs/integrations/webhooks/inngest.mdx
@@ -85,7 +85,7 @@ With Inngest already set up in your codebase, you can now use these events as tr
 Suppose you need to write a function which will insert a new user into the database which will be triggered whenever `clerk/user.created` event occurs. You would use the `inngest.createFunction` method, like in the example below:
 
 
-```typescript
+```typescript filename="src/inngest/sync-user.ts"
 const syncUser = inngest.createFunction(
  { id: 'sync-user-from-clerk' },  // ←The 'id' is an arbitrary string used to identify the function in the dashboard
  { event: 'clerk/user.created' }, // ← This is the function's triggering event
