(wip) updating guides

--- a/docs/references/nextjs/clerk-middleware.mdx
+++ b/docs/references/nextjs/clerk-middleware.mdx
@@ -1,18 +1,18 @@
 ---
 title: clerkMiddleware() | Next.js
-description: The `clerkMiddleware()` function allows you to protect your Next.js application using middleware.
+description: The `clerkMiddleware()` function allows you to protect your Next.js application using Middleware.
 ---
 
 # `clerkMiddleware()`
 
-The `clerkMiddleware()` helper integrates Clerk authentication into your Next.js application through middleware. `clerkMiddleware()` is compatible with both the App and Pages routers. 
+The `clerkMiddleware()` helper integrates Clerk authentication into your Next.js application through Middleware. `clerkMiddleware()` is compatible with both the App and Pages routers. 
 
-## Usage
+## Configure `clerkMiddleware()`
 
 Create a `middleware.ts` file. If your application uses the `src/` directory, your `middleware.ts` file should be placed inside the `src/` folder. If you are not using a `src/` directory, place the `middleware.ts` file in your root directory. 
 
 <Callout level="info">
-For more information about middleware in Next.js, see the [Next.js documentation](https://nextjs.org/docs/pages/building-your-application/routing/middleware).
+For more information about Middleware in Next.js, see the [Next.js documentation](https://nextjs.org/docs/pages/building-your-application/routing/middleware).
 </Callout>
 
 ```tsx filename="middleware.ts"
@@ -42,7 +42,7 @@ NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL=/
 
 ## Protect Multiple Routes
 
-`clerkMiddleare()` ships with the helper function `createRouteMatcher()`. `createRouteMatcher()` allows you to add an array of routes, which returns a function that takes in the `request` object to then check if the route the user is trying to visit matches one of the routes. You can use this matcher to protect multiple routes. The paths provided to this helper can be in the same format as the paths provided to the Next Middleware matcher.  
+`clerkMiddleware()` ships with the helper function `createRouteMatcher()`. `createRouteMatcher()` allows you to add an array of routes, which returns a function that takes in the `request` object to then check if the route the user is trying to visit matches one of the routes. You can use this matcher to protect multiple routes. The paths provided to this helper can be in the same format as the paths provided to the Next Middleware matcher.  
 
 In the following example the routes `/dashboard(.*)` and `/forum(.*)` are passed to the `createRouteMatcher()` function and assigned to `isProtectedRoute`.
 
@@ -73,6 +73,8 @@ export const config = {
 ### `createRouteMatcher()`
 
 The `createRouteMatcher()` allows you to pass an array of routes, and then check if the user's router matches one of the routes in the array. This will return a `boolean`. You can use more than one `createRouterMatcher()` in your application if you have two or more groups of routes.
+
+`createRouteMatcher()` allows you to add an array of routes, which returns a function. The returned function takes in the `request` object and then returns a boolean indicated whether or not the route the user is trying to visit matches one of the routes passed to `createRouteMatcher()`. You can use this matcher to protect multiple routes. The paths provided to this helper can be in the same format as the paths provided to the Next Middleware matcher.  
 
 ```tsx filename="middleware.ts" 
 import { clerkMiddleware, createRouteMatcher } from '@clerk/nextjs/server';
@@ -163,7 +165,7 @@ if (protectedRoute(req)) {
 
 
 
-## Debug your middleware
+## Debug your Middleware
 
 If you are having issues getting your Middleware dialed in, or are trying to narrow down auth-related issues, you can use the debugging feature in `clerkMiddlware()`. Add `{ debug: true }` to `clerkMiddlware()` and you will get debug logs in your terminal.
 
