Add filename to represent two code examples
This now shows that the second example is built on top of the first

Co-authored-by: Roy Anger <roy@royanger.com>

--- a/docs/integrations/webhooks/inngest.mdx
+++ b/docs/integrations/webhooks/inngest.mdx
@@ -119,7 +119,7 @@ With Inngest, each function has automatic retries, so only the code that has iss
 The code below creates another function using the same `clerk/user.created` event and adds the logic to send the welcome email:
 
 
-```typescript
+```typescript  filename="src/inngest/welcome-emails.ts"
 const sendWelcomeEmail = inngest.createFunction(
  { id: 'send-welcome-email' },
  { event: 'clerk/user.created' },
@@ -145,7 +145,7 @@ Every Inngest function handler has an additional `step` object which provides to
 
 The code below sends a welcome email, then uses `step.sleep` to wait for three days before sending another email offering a free trial:
 
-```typescript
+```typescript filename="src/inngest/welcome-emails.ts"
 const sendOnboardingEmails = inngest.createFunction(
  { id: 'onboarding-emails' },
  { event: 'clerk/user.created' },
