fix session creation for email/sms otp

--- a/docs/custom-flows/email-sms-otp.mdx
+++ b/docs/custom-flows/email-sms-otp.mdx
@@ -179,7 +179,7 @@ Let's see the above in action. If you want to learn more about sign-ups, check o
               code: "123456",
           }); 
           
-          await setActive({sessionId: signUp.createdSessionId});
+          await setActive({session: signUp.createdSessionId});
       }
       
       return (
@@ -377,7 +377,7 @@ Let's see the above in action. If you want to learn more about sign-ins, check o
                 code: "123456",
             });
             
-            await setActive({sessionId: signIn.createdSessionId});
+            await setActive({session: signIn.createdSessionId});
         }
         
         return (
