--- a/docs/authentication/social-connections/google.mdx
+++ b/docs/authentication/social-connections/google.mdx
@@ -50,6 +50,18 @@ In the Clerk Dashboard configuration screen, you should end up with something li
 
 Finally, click **Save** so that the settings are applied. Congratulations! Social connection with Google is now configured for your instance.
 
+### Block email subaddresses
+
+![Block email subaddresses enabled for Google social connection.](/docs/images/authentication-providers/google/google-block-email-subaddresses.webp)
+
+In the Clerk Dashboard configuration screen, you also have an option to block email subaddresses. With this setting on, any Google account with an email address that contains the characters `+`, `=` or `#` will not be able to sign in, sign up, or be added to existing accounts. By default, this setting will be enabled for new Google social connections. 
+
+For a Google organization with domain `example.com`, blocking email subaddresses will prevent someone with access to email `user@example.com` from signing up with email `user+alias@example.com`. This is a known [Google OAuth vulnerability](https://trufflesecurity.com/blog/google-oauth-is-broken-sort-of/) that could allow unauthorized access since there is no way for a Google organization administrator to suspend or delete the email alias account. As a result, we recommend enabling this setting for Google OAuth.
+
+<Callout type="info">
+  Existing Google accounts with email subaddresses will be blocked by this restriction and will not be able to sign in.
+</Callout>
+
 ## References
 
 - [OAuth API verification FAQs](https://support.google.com/cloud/answer/9110914#)
