--- a/docs/authentication/social-connections/google.mdx
+++ b/docs/authentication/social-connections/google.mdx
@@ -50,6 +50,21 @@ In the Clerk Dashboard configuration screen, you should end up with something li
 
 Finally, click **Save** so that the settings are applied. Congratulations! Social connection with Google is now configured for your instance.
 
+### Important note about switching to production
+
+Google OAuth apps by default start off in the "Testing" [publishing status](https://support.google.com/cloud/answer/10311615#publishing-status).
+The publishing status setting can be found at the **APIs & Services > OAuth consent screen** page within the Google Cloud Platform console.
+
+"Testing" mode is intended for internal testing prior to opening Google Auth connections to your [intended audience](https://support.google.com/cloud/answer/10311615#user-type).
+It is limited to 100 test users and depending on the requested OAuth scopes, they may need to be explicitly added to your trusted user list to be able to connect.
+
+Once ready to switch your Google OAuth app to production, you will need to set the publishing status to "In Production".
+This involves a verification process with regard to your application name, logo and scopes requested before Google accepts the switch to production.
+
+Please make sure your production application always uses a corresponding Google OAuth app that is set to "In Production" publishing status, so that your end users do not encounter any issues connecting.
+
+![Publishing status setting within Google Cloud Platform console.](/docs/images/authentication-providers/google/oauth_google_consent_screen.png)
+
 ### Block email subaddresses
 
 <Images
@@ -70,3 +85,4 @@ For a Google organization with domain `example.com`, blocking email subaddresses
 ## References
 
 - [OAuth API verification FAQs](https://support.google.com/cloud/answer/9110914#)
+- [Setting up your OAuth consent screen](https://support.google.com/cloud/answer/10311615)
