Remove unnecessary check from read-session-data doc

--- a/docs/references/nextjs/read-session-data.mdx
+++ b/docs/references/nextjs/read-session-data.mdx
@@ -142,7 +142,7 @@ The `currentUser()` helper will return the [`Backend API User`](https://clerk.co
         return res.status(401).json({ error: "Unauthorized" });
       }
 
-      const user = userId ? await clerkClient.users.getUser(userId) : null;
+      const user = await clerkClient.users.getUser(userId);
 
       // use the user object to decide what data to return
 
