Add callout for unescaping special characters in email and SMS templates

--- a/docs/authentication/configuration/email-options.mdx
+++ b/docs/authentication/configuration/email-options.mdx
@@ -94,6 +94,10 @@ For further information on Handlebars, we recommend you take a look at the [offi
 
 There will definitely be a learning curve before you master both Revolvapp syntax and Handlebars, but there's no doubt that you will be crafting beautiful templates in no time!
 
+<Callout type="info">
+  In order to unescape special characters, you may need to wrap variables in triple curly braces. For example: `{{{app.name}}}`. This will allow special characters (e.g. `'`, `&`) to appear as displayed and not as escaped HTML entities (e.g. `&apos;`, `&amp;`).
+</Callout>
+
 ## Template operations
 
 Please consult the following sub-sections to see which operations are available in the template editor.
