--- a/docs/users/sync-data.mdx
+++ b/docs/users/sync-data.mdx
@@ -122,7 +122,7 @@ pnpm add svix
       }
 
       // Get the body
-      const payload = await req.json()
+      const payload = (await req.json()) as Record<string, unknown>;
       const body = JSON.stringify(payload);
 
       // Create a new Svix instance with your secret.
