--- a/docs/references/react/add-react-router.mdx
+++ b/docs/references/react/add-react-router.mdx
@@ -171,8 +171,9 @@ if (!PUBLISHABLE_KEY) {
 }
 
 export default function RootLayout() {
+  const navigate = useNavigate();
   return (
-    <ClerkProvider publishableKey={PUBLISHABLE_KEY}>
+    <ClerkProvider navigate={navigate} publishableKey={PUBLISHABLE_KEY}>
       <header className="header">
         <div>
           <div>
