--- a/docs/organizations/managing-roles.mdx
+++ b/docs/organizations/managing-roles.mdx
@@ -725,9 +725,13 @@ const SelectRole = (props: SelectRoleProps) => {
 ```
 
 ```js
+<p>List of memberships:</p>
 <ul id="memberships_list"></ul>
+
+<p>List of invitations:</p>
 <ul id="invitations_list"></ul>
 
+<p>Send a new invitation:</p>
 <form id="new_invitation">
   <div>
     <label>Email address</div>
@@ -741,7 +745,10 @@ const SelectRole = (props: SelectRoleProps) => {
   async function renderMemberships(organization, isAdmin) {
     const list = document.getElementById("memberships_list");
     try {
-      const memberships = await organization.getMemberships();
+      const { data } = await organization.getMemberships();
+      
+      const memberships = data;
+
       memberships.map((membership) => {
         const li = document.createElement("li");
         li.textContent = `${membership.publicUserData.identifier} - ${membership.role}`;
@@ -779,7 +786,10 @@ const SelectRole = (props: SelectRoleProps) => {
   async function renderInvitations(organization, isAdmin) {
     const list = document.getElementById("invitations_list");
     try {
-      const invitations = await organization.getPendingInvitations();
+      const { data } = await organization.getInvitations();
+
+      const invitations = data;
+
       invitations.map((invitation) => {
         const li = document.createElement("li");
         li.textContent = `${invitation.emailAddress} - ${invitation.role}`;
@@ -805,7 +815,10 @@ const SelectRole = (props: SelectRoleProps) => {
   async function init() {
     // This is the current organization ID.
     const organizationId = "org_XXXXXXX";
-    const organizationMemberships = await window.Clerk.user.getOrganizationMemberships()
+    const { data } = await window.Clerk.user.getOrganizationMemberships();
+
+    const organizationMemberships = data;
+
     const currentMembership = organizationMemberships.find(membership 
       => membership.organization.id === organizationId);
     const currentOrganization = currentMembership.organization;
@@ -846,4 +859,4 @@ const SelectRole = (props: SelectRoleProps) => {
 
 {/* TODO: Should we mention the update method on the OrganizationMembership object? Or the updateMember method on the Organization object? Or the updateOrganizationMembership method from the Backend API? */}
 
-{/* TODO: ## Remove members plus examples? */}
+{/* TODO: ## Remove members , plus examples? */}
