--- a/docs/references/javascript/types/clerk-paginated-response.mdx
+++ b/docs/references/javascript/types/clerk-paginated-response.mdx
@@ -12,7 +12,7 @@ An interface that describes the response of a method that returns a paginated li
 | Properties | Type | Description |
 | --- | --- | --- |
 | `data` | `T[]` |  An array that contains the fetched data. |
-| `total_count` | `number` |  The total count of data that exist remotely. |
+| `totalCount` | `number` |  The total count of data that exist remotely. |
 
 ## Error handling
 
