update return types

--- a/docs/references/javascript/organization/invitations.mdx
+++ b/docs/references/javascript/organization/invitations.mdx
@@ -27,7 +27,7 @@ function getInvitations(params?: GetInvitationsParams): Promise<PaginatedResourc
 
 | Type | Description |
 | --- | --- |
-| <code>Promise\<[ClerkPaginatedResponse][pag-res-ref]\<[OrganizationInvitation][orginv-ref]\>></code> | A `Promise` which resolves with a list of [`OrganizationInvitation`][orginv-ref] objects. |
+| <code>Promise\<[ClerkPaginatedResponse][pag-res-ref]\<[OrganizationInvitation][orginv-ref]\>></code> | A `Promise` which resolves with a [`ClerkPaginatedResponse`][pag-res-ref] of [`OrganizationInvitation`][orginv-ref] objects. |
 
 ## `inviteMember()`
 
